# investor_tool

./: .dockerignore  .env.example  .gitignore  .test_durations  BATCH_PLAN.md  BUILD_SESSION_12.md  Dockerfile  PROJECT_BRIEF.md  README.md  REFACTOR_PLAN.md  fly.toml  pyproject.toml
.github/workflows/: ci.yml  fly-deploy.yml  scheduler.yml
clients/test_workspace/config/: axes.yaml  company.yaml  sources.yaml
clients/test_workspace/data/fixtures/: announcements.json  funds_seed.csv  outcomes_seed.json  partner_signals_seed.json  session1_fixture.json
clients/test_workspace/data/fixtures/fund_pages/foundrynorth.example/: index.html  portfolio.html  team.html
clients/test_workspace/data/fixtures/fund_pages/meridiancap.example/: index.html  portfolio.html  team.html
clients/test_workspace/data/fixtures/fund_pages/northbeam.example/: index.html  portfolio.html  team.html
clients/test_workspace/data/fixtures/fund_pages/quantalabs.example/: index.html  portfolio.html  team.html
clients/test_workspace/data/fixtures/fund_pages/tidewater.example/: index.html  portfolio.html  team.html
clients/test_workspace/prompts/examples/: signal_led.md
core/: attio_client.py  backups.py  banner.py  batch_ids.py  company_config.py  config_loader.py  crm_polling.py  crm_secrets.py  csv_export.py  csv_ingest.py  dates.py  db.py  deck_extraction.py  deliverability.py  discovery.py  drive_client.py  followup_builder.py  fund_enrichment.py  gmail_client.py  gmail_oauth.py  http_client.py  ids.py  investors_global.py  lead_likelihood.py  migrations.py  operator_command.py  outreach_events.py  partner_evidence.py  production_guards.py  relationships.py  round_fit.py  runlock.py  runs.py  sequences.py  signal_quality.py  similarity.py  source_fetch.py  sources.py  stage_result.py  stage_runner.py  (+4 more)
core/approval/: gate.py  persistence.py  state_machine.py
core/attio/: payload.py  preserve.py
core/attribution/: promotion.py  review_queue.py  status.py
core/calibration/: signal_quality_examples.json
core/email/: batch_qa.py  draft_routing.py  founder_conviction.py  prompt.py  strategy_eligibility.py  stub_bank.py
core/llm/: client.py  limiter.py
core/meeting_prep/: __init__.py  cache.py  dossier.py  drive_sync.py  eligibility.py  evidence.py  framing_brief.py  objection_map.py  render.py
core/outcomes/: attio_adapter.py  events.py  persistence.py
core/scoring/: composite.py  major_kill.py  persistence.py  reachability.py  recommendation.py  round_building.py  send_now_priority.py
core/stage2/: __init__.py  discovery.py  extract.py  fetch.py  partner_links.py
core/stage4/: __init__.py  extract.py  fetch.py
docs/: API.md  FEATURE_CATALOG.md  FEATURE_USEFULNESS.md  GMAIL_OAUTH.md  SCHEDULER.md  openapi.json
jobs/: apply_axis_suggestion.py  attio_outcome_sync.py  monthly_learning_report.py
prompts/: attribute_deal.txt  classify_reply.txt  deck_extraction.txt  enrich_fund.txt  extract_partner_signals.txt  framing_brief.txt  generate_email.txt  generate_followup.txt  investor_dossier.txt  objection_map.txt  score_candidate.txt  signal_quality.txt
schemas/: candidate_score.py  deal_attribution.py  deck_extraction.py  email_generation.py  followup_generation.py  framing_brief.py  fund_enrichment.py  investor_dossier.py  objection_map.py  partner_signals.py  reply_classification.py  signal_quality.py
scripts/: 00_verify_attio_schema.py  01_aggregate_sources.py  02_enrich_funds.py  03_mine_activity.py  04_mine_partner_signals.py  05_verify_and_quality.py  06_score_candidates.py  07_generate_emails.py  08_sync_to_attio.py  approve_draft.py  backfill_attributions.py  build_feature_catalog.py  bulk_reattribute.py  calibration.py  check_ready.py  classify_reply.py  clear_fund_field.py  compare_batches.py  connect_gmail.py  correct_deal_attribution.py  create_gmail_drafts.py  doctor.py  export_partners_for_apollo.py  export_send_queue.py  import_partner_emails_apollo.py  init_wizard.py  init_workspace.py  list_ambiguous_matches.py  list_blocked_recommendations.py  list_draft_history.py  list_missing_fields.py  list_override_events.py  list_partners_for_action.py  list_pending_review.py  list_pipeline_batches.py  list_sources.py  list_unmatched_attributions.py  manual_override.py  new_pipeline_batch.py  prep_brief.py  (+15 more)
tests/: conftest.py  test_admin.py  test_api.py  test_apollo_workflow.py  test_apply_axis_suggestion.py  test_approval_clis.py  test_approval_gate.py  test_approval_gates.py  test_approval_persistence.py  test_approval_state_machine.py  test_attio_client_retries.py  test_attio_payload.py  test_attio_pipeline_pollers.py  test_attio_preserve.py  test_attribution_promotion.py  test_attribution_status.py  test_authenticated_e2e.py  test_backups.py  test_cadence_settings.py  test_channel_aware_prompt.py  test_check_ready.py  test_company_config.py  test_config_and_validators.py  test_crm_b7_b8_b9.py  test_crm_connections.py  test_crm_polling.py  test_csv_ingest.py  test_deck_extraction.py  test_deliverability.py  test_discovery.py  test_discovery_opt_in.py  test_doctor_invariants_new.py  test_dossier.py  test_drafts_mark_sent.py  test_drive_sync.py  test_email_batch_qa.py  test_email_draft_routing.py  test_email_prompt.py  test_email_samples.py  test_email_strategy_eligibility.py  (+73 more)
tools/: generate_scale_fixture.py
ui_prototype/: app.js  index.html  mock-data.js  styles.css
web/: README.md  api.py  app.py  deps.py
web/routers/: __init__.py  admin.py  cadence.py  coach.py  crm.py  email_samples.py  google.py  hooks.py  investors.py  sequences.py
