[project]
name = "investor-outreach"
version = "0.1.0"
description = "Workspace-based VC partner outreach pipeline. CSV-first."
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "selectolax>=0.3.21",
    "anthropic>=0.40",
    "sqlalchemy>=2.0",
    "pyyaml>=6.0",
    "pydantic>=2.7",
    "aiolimiter>=1.1",
    "tenacity>=8.3",
    "rapidfuzz>=3.9",
    "python-dotenv>=1.0",
    "google-api-python-client>=2.100",
    "google-auth-oauthlib>=1.2",
    "feedparser>=6.0",
]

[project.optional-dependencies]
# Web operator UI (Streamlit). Install with: uv sync --extra web
web = [
    "streamlit>=1.40",
]
# FastAPI backend that the external React frontend talks to.
# Install with: uv sync --extra api
api = [
    "fastapi>=0.115",
    # PDF / PPTX parsing for the deck-first onboarding step
    # (POST /config/company/extract-from-deck). pypdf is pure Python
    # + light; python-pptx covers .pptx (the binary .ppt format
    # requires libreoffice and is left as a warning case).
    "pypdf>=5.0",
    "python-pptx>=1.0",
    # openpyxl is the canonical xlsx reader. Operators uploading
    # investor lists from OpenVC get .xlsx exports today; the
    # /pipeline/sources endpoint normalizes them to CSV server-side
    # before Stage 1 consumes them.
    "openpyxl>=3.1",
    "python-multipart>=0.0.20",
    # Supabase JWT verification on every authed endpoint
    # (HS256 with SUPABASE_JWT_SECRET). PyJWT is the canonical
    # minimal library; python-jose adds JWS/JWE machinery we don't
    # need for symmetric-secret tokens.
    "PyJWT>=2.8",
    "uvicorn[standard]>=0.30",
]

[tool.uv]
package = false
dev-dependencies = [
    "pytest>=8.0",
    # pytest-xdist parallelizes the smoke suite across CPU cores.
    # On GHA's standard 2-core runner this is roughly 1.7x; locally
    # on a 4+ core machine it's 3x+. Tests are already
    # tmp_path-isolated so per-worker collisions don't happen.
    "pytest-xdist>=3.6",
]

[tool.pytest.ini_options]
# -n auto: distribute tests across all CPU cores. The suite is
# already tmp_path-isolated, so per-worker collisions don't happen.
# Serial run is ~15 min on 805 tests; xdist drops it to a few min
# on a multi-core host (and ~1.7x on GHA's 2-core runners).
addopts = "-n auto"
